--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@types/p5": "^0.9.0",
     "npm-run-all": "^4.1.5",
     "live-server": "^1.2.1",
-    "typescript": "^3.7.3"
-    "set-value": ">=4.0.1"
-    "glob-parent": ">=5.1.2"
+    "typescript": "^3.7.3",
+    "set-value": ">=4.0.1",
+    "glob-parent": ">=5.1.2",
     "kind-of": ">=6.0.3"
   }
 }
